# picovolt

./: .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  python-wheels.yml  release.yml
bindings/go/: README.md  go.mod  picovolt.go
bindings/go/example/: main.go
bindings/go/pvsql/: pvsql.go  pvsql_test.go
bindings/js/: README.md  sqlite.js
bindings/python/: README.md  example.py  pyproject.toml  setup.py
bindings/python/picovolt/: __init__.py  dbapi2.py
docs/: EXTENDING.md  FORMAT.md
examples/: bench.rs  bench_scrub.rs  make_golden.rs  make_rewind_dataset.rs  notes.rs  repl.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_columnar.rs  decode_monolith.rs  decode_wasm.rs
include/: picovolt.h
js/: README.md  index.html  node-demo.cjs
site/: README.md  app.html  index.html
src/: db.rs  ffi.rs  json.rs  lib.rs  migrate.rs  wasm_api.rs
src/core/: errors.rs  mod.rs  types.rs  value.rs
src/engine/: compliance.rs  interp.rs  mod.rs  mvcc.rs  query.rs  wasm.rs
src/storage/: cache.rs  cas.rs  compress.rs  index.rs  mod.rs  page.rs  record.rs  vle.rs
tests/: audit_injection.rs  format_robustness.rs  fuzz_smoke.rs  persistent_index_v2.rs  richer_sql.rs  streaming.rs
tests/fixtures/: golden_v0_11_0.pvdb  golden_v1_3_0.pvdb
