[package]
name = "picovolt"
version = "0.10.0"
edition = "2021"
rust-version = "1.74"
description = "PicoVolt (PVDB): a polymorphic embedded database engine in Rust."
license = "Apache-2.0"
repository = "https://github.com/MiniJe/picovolt"
readme = "README.md"
keywords = ["database", "embedded", "storage-engine", "mvcc", "columnar"]
categories = ["database-implementations"]
# Keep the published Rust package lean; these are repo-only tooling and the
# out-of-tree language bindings (Go/Python), which live in /bindings.
exclude = ["/fuzz", "/.github", "/bindings"]

# `cdylib` is needed for the wasm/npm build (wasm-pack); `rlib` for normal use.
[lib]
crate-type = ["cdylib", "rlib"]

# The HTTP/JSON server (enabled by the `server` feature).
[[bin]]
name = "picovolt-server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
# Enable the JavaScript/npm bindings (build for wasm32 with wasm-pack).
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:js-sys"]
# Enable the C ABI for native FFI bindings (Go/cgo, Python/ctypes, C). Build a
# shared library with: cargo build --release --features capi
capi = []
# Build the picovolt-server binary (HTTP/JSON, single-writer actor). Build with:
# cargo build --release --features server
server = ["dep:tiny_http"]

[dependencies]
thiserror = "2.0"
blake3 = "1"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmi = "0.50"

# Optional, only compiled with `--features wasm`.
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
tiny_http = { version = "0.12", optional = true }

[dev-dependencies]
wat = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "allow"
