[package]
name = "picovolt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

[dependencies.picovolt]
path = ".."

# Each target is a separate libFuzzer binary.
[[bin]]
name = "decode_monolith"
path = "fuzz_targets/decode_monolith.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_wasm"
path = "fuzz_targets/decode_wasm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_columnar"
path = "fuzz_targets/decode_columnar.rs"
test = false
doc = false
bench = false

# Isolate this crate from the parent package's build graph.
[workspace]
