[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "picovolt"
version = "0.7.0"
description = "Python bindings (ctypes) for the PicoVolt embedded database engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["database", "embedded", "storage-engine", "mvcc", "ffi"]

[project.urls]
Repository = "https://github.com/MiniJe/picovolt"

[tool.setuptools]
packages = ["picovolt"]

[tool.setuptools.package-data]
# When a prebuilt shared library is copied into the package before building, it
# is bundled into the (platform-specific) wheel.
picovolt = ["*.so", "*.dylib", "*.dll"]

# A source checkout still works without a bundled library: the wrapper falls back
# to PICOVOLT_LIB or the cargo build output (target/release). The platform wheel
# is produced by copying the compiled library into picovolt/ before the build;
# see setup.py and .github/workflows/python-wheels.yml.
